ajustes na arquitetura e login admin master
